--- a/package.json
+++ b/package.json
@@ -8,5 +8,10 @@
     "typescript": "^4.4.3",
     "webpack": "^5.58.1",
     "webpack-cli": "^4.9.0"
-  }
+  },
+  "dependencies": {
+    "@types/three": "^0.133.0",
+    "three": "^0.133.1"
+  },
+  "private": true
 }
