--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,12 @@
 {
   "compilerOptions": {
     "sourceMap": true,
-    "target": "ES5", // TSはECMAScript 5に変換
-    "module": "ES2015" // TSのモジュールはES Modulesとして出力
+    "target": "ES5",
+    "module": "ES2015",
+    "moduleResolution": "node"
   },
   "strict": true,
   "noUnusedLocals": true,
-  "noUnusedParameters": true
+  "noUnusedParameters": true,
+  "lib": ["ES2020", "DOM"]
 }
